--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
-    "next": "15.1.3",
+    "next": "^15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
